--- a/Kitsunebi.conf
+++ b/Kitsunebi.conf
@@ -849,6 +849,7 @@ DOMAIN-SUFFIX,gvt1.com,PROXY
 DOMAIN-SUFFIX,gvt3.com,PROXY
 DOMAIN-SUFFIX,xn--ngstr-lra8j.com,PROXY
 DOMAIN-KEYWORD,google,PROXY
+DOMAIN-KEYWORD,inoreader,PROXY
 DOMAIN-KEYWORD,blogspot,PROXY
 # > Microsoft
 DOMAIN-SUFFIX,onedrive.live.com,PROXY
@@ -2030,6 +2031,7 @@ DOMAIN-SUFFIX,zello.com,REMOTE
 DOMAIN-SUFFIX,zeronet.io,REMOTE
 DOMAIN-SUFFIX,zoom.us,REMOTE
 DOMAIN-KEYWORD,github,REMOTE
+DOMAIN-KEYWORD,inoreader,REMOTE
 DOMAIN-KEYWORD,jav,REMOTE
 DOMAIN-KEYWORD,pinterest,REMOTE
 DOMAIN-KEYWORD,porn,REMOTE
